fix some spacing and sizing

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -423,3 +423,8 @@ hr {
 .news-image {
   width: 20%;
 }
+.news-group {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
